--- a/app/frontend/src/templates/v1-degree.html
+++ b/app/frontend/src/templates/v1-degree.html
@@ -85,7 +85,7 @@
             </span>
           </div>
           <div style="display: flex; align-items: center; margin-bottom: 0.75rem">
-            <span style="width: 12rem; font-weight: 600">Năm tốt nghiệp:</span>
+            <span style="width: 12rem; font-weight: 600">Khóa:</span>
             <span
               style="
                 flex: 1;
@@ -95,7 +95,7 @@
                 font-weight: bold;
               "
             >
-              {{ .Chuyên ngành }}
+              {{ .Khoa }}
             </span>
           </div>
           <div style="display: flex; align-items: center; margin-bottom: 0.75rem">
